--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <em><a href="https://zingnews.vn/wibu-la-gi-post1273260.html">wibu chúa</a>,</em>,<strong><a href="https://www.xn--t-in-1ua7276b5ha.com/vozer">vozer đụt cận trĩ</a></strong>.
         </p>
         <p> I love reading books and listening to audio.</p>
-        <p><strong>Ko những óc chó hạ đẳng còn là cặn bã của xã hội.</strong></p>
+        <p><strong><em>Ko những óc chó hạ đẳng còn là cặn bã của xã hội.</em></strong></p>
       </td>
     </tr>
   </table>
